...
import 'package:climbmetrics/viewmodels/project_library/project_library_provider.dart';
import 'package:flutter/material.dart';
import 'package:flutter_rating_bar/flutter_rating_bar.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';

class BoulderingRouteView extends ConsumerStatefulWidget {
  const BoulderingRouteView({super.key});

  @override
  ConsumerState<BoulderingRouteView> createState() => _BoulderingRouteViewState();
}

class _BoulderingRouteViewState extends ConsumerState<BoulderingRouteView> with RouteAware {
...
          );

          return;
        };
      }

      likeButton = IconButton(
        key: Key('likeButton'),
        onPressed: onPressed, 
        icon: Icon(
          Icons.thumb_up_alt_rounded,
          size: iconSize,
          color: color,
...
          );

          return;
        };
      }

      dislikeButton = IconButton(
        key: Key('dislikeButton'),
        onPressed: onPressed, 
        icon: Icon(
          Icons.thumb_down_alt_rounded,
          size: iconSize,
          color: color,
...
